# BuildUpVerb-Plugin

./: .gitignore  BUILD_NOTES.md  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md  SIGNAL_ROUTING.md  build_and_install.sh
Source/: FreeverbWrapper.cpp  FreeverbWrapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VocoderFilterbank.cpp  VocoderGated.cpp  VocoderProcessor.cpp  VocoderSimple.cpp
Source/ui/public/: index.html
Source/ui/public/css/: style.css
Source/ui/public/js/: main.js
